--- a/frappe/core/doctype/installed_applications/installed_applications.json
+++ b/frappe/core/doctype/installed_applications/installed_applications.json
@@ -18,7 +18,7 @@
  ],
  "issingle": 1,
  "links": [],
- "modified": "2020-05-12 10:09:14.310622",
+ "modified": "2025-06-30 20:20:07.982632",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "Installed Applications",
@@ -38,5 +38,5 @@
  "quick_entry": 1,
  "sort_field": "modified",
  "sort_order": "DESC",
- "track_changes": 1
+ "states": []
 }
